[gd_scene load_steps=10 format=2]

[ext_resource path="res://interface/quest_board/panel.png" type="Texture" id=1]
[ext_resource path="res://interface/quest_board/paper.png" type="Texture" id=2]
[ext_resource path="res://core/utils/KeyRichTextLabel.gd" type="Script" id=3]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=4]
[ext_resource path="res://interface/quest_board/QuestBoardUI.gd" type="Script" id=5]
[ext_resource path="res://core/utils/KeyLabel.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/quest_board/QuestNameButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/quest_board/exit_button.png" type="Texture" id=9]

[node name="QuestBoardUI" type="CanvasLayer"]
layer = 126
script = ExtResource( 5 )
quest_name_button = ExtResource( 7 )
transition_in_animation = "left_to_right"
transition_in_duration = 0.5

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -160.0
margin_bottom = -88.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 224, 224 )
patch_margin_left = 52
patch_margin_top = 52
patch_margin_right = 48
patch_margin_bottom = 48
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -768.0
margin_top = -348.0
margin_right = 704.0
margin_bottom = 356.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestListContainer" type="VBoxContainer" parent="Control/HBoxContainer"]
margin_right = 512.0
margin_bottom = 704.0
rect_min_size = Vector2( 512, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestsLabel" parent="Control/HBoxContainer/QuestListContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 512.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "QUESTS"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/HBoxContainer/QuestListContainer"]
margin_top = 72.0
margin_right = 512.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/QuestListContainer/ScrollContainer"]
margin_right = 512.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestDescriptionContainer" type="NinePatchRect" parent="Control/HBoxContainer"]
margin_left = 516.0
margin_right = 1472.0
margin_bottom = 704.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 44, 44 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/QuestDescriptionContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 32.0
margin_right = -36.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestNameLabel" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 892.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUEST_NAME"
align = 1
valign = 1

[node name="QuestDescriptionLabel" type="RichTextLabel" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 892.0
margin_bottom = 584.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 892, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "QUEST_DESCRIPTION"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer"]
margin_top = 588.0
margin_right = 892.0
margin_bottom = 664.0

[node name="DeclineButton" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "DECLINE"
flat = true

[node name="Spacer" type="Control" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer/HBoxContainer"]
margin_left = 298.0
margin_right = 592.0
margin_bottom = 76.0
size_flags_horizontal = 3

[node name="AcceptButton" parent="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 596.0
margin_right = 892.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "ACCEPT"
flat = true

[node name="BackButton" type="Button" parent="Control"]
margin_left = 128.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 128, 128 )
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer/HBoxContainer/DeclineButton" to="." method="_on_DeclineButton_button_down"]
[connection signal="button_down" from="Control/HBoxContainer/QuestDescriptionContainer/VBoxContainer/HBoxContainer/AcceptButton" to="." method="_on_AcceptButton_button_down"]
[connection signal="button_down" from="Control/BackButton" to="." method="_on_BackButton_button_down"]
